--- a/DeliveryNew/appsettings.json
+++ b/DeliveryNew/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=dpg-d4rf7n24i8rc738dhhcg-a.frankfurt-postgres.render.com;Port=5432;Database=project2_pqhz;Username=project2_pqhz_user;Password=6k26eCkC5oMu0Ezv4JbuonFUOwQZaqVS;Pooling=true;SSL Mode=Require;Trust Server Certificate=true;"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=Project2;Username=Appak;Password=1234"
-  }
+
 }
